[finalizacao de codigo]

--- a/views/maquinas/edit.ejs
+++ b/views/maquinas/edit.ejs
@@ -14,6 +14,7 @@
             <div class="card-body">
                     <form  method="POST" action="/maquinas/update">
                             <input class="form-control" type="text" name="descricao" placeholder="Insira um nome Para a Máquina" value="<%= maquina.descricao %>"><br>
+                            <input class="form-control" type="text" name="mac" placeholder="Insira um mac nome Para a Máquina" value="<%= maquina.mac %>"><br>
                             <input class="form-control" type="text" name="codigo" placeholder="Insira um código Para a Máquina" value="<%= maquina.codigo %>"><br>
                             <input class="form-control" type="text" name="peso" placeholder="Insira um peso em Toneladas Para a Máquina" value="<%= maquina.peso %>"><br>
                             <input class="form-control" type="text" name="modelo" placeholder="Inseira o modelo da Máquia" value="<%= maquina.modelo %>"><br>
