--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,5 +12,6 @@
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
+    <script src="/scripts/plotly-latest.min.js"></script>
 
   </head>
