--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -10,21 +10,21 @@
         <li class="navbar-item">
             <a class="nav-link <%=nav_maquinas%>" href="/maquinas" >Maquinas</a>
         </li>
-        <li class="navbar-item">
+        <!-- <li class="navbar-item">
                 <a class="nav-link <%=nav_produtos%>" href="/produtos">Produtos</a>
         </li>
         <li class="navbar-item">
                 <a class="nav-link <%=nav_mp%> " href="/materiaprima">Matérias Primas</a>
-        </li>
+        </li> -->
         <li class="navbar-item">
                 <a class="nav-link <%=nav_usuarios%>" href="/users">Usuários</a>
         </li>
-        <li class="navbar-item">
+        <!-- <li class="navbar-item">
             <a class="nav-link <%=nav_moldes%>" href="/moldes">Moldes</a>
         </li>
         <li class="navbar-item">
             <a class="nav-link <%=nav_clientes%>" href="/clientes">Clientes</a>
-        </li>
+        </li> -->
      
 
 
