--- a/views/fichas/index.ejs
+++ b/views/fichas/index.ejs
@@ -8,46 +8,42 @@
     <a class="btn btn-success" href="/fichas/new"> Inserir Nova Ficha Técnica</a>
     <hr>
 
-    <table class="table table-bordered"> 
+    <div id="plotly">
+
+    </div>
+
+    <select name="maquinas" id="maquinas"  class="form-control">
+        <option > Selecione uma máquina</option>
+        <% maquinas.forEach((maquina) => { %>
+
+                <option value="<%= maquina.id %>"> <%= maquina.descricao %></option>
+
+        <% }) %>
+
+    </select>
+<br>
+
+
+    
+    <table class="table table-bordered" id="parametros"> 
         <thead>
             <tr>
-                <th> ID </th>
-                <th> Cliente </th>
-                <th> Produto </th>
-                <th> Máquina </th>
-                <th> Matéria Prima </th>
-                <th> Molde </th>
+                <th> Parâmetro </th>
+                <th> Valor Mínimo </th>
+                <th> Valor Máximo </th>
+                <th> Último valor medido </th>             
             </tr>
         </thead>
         <tbody>
 
-           <% fichas.forEach(ficha => { %>
-            <tr>
-                <td> <%= ficha.id %> </td>
-                <td> <%=ficha.cliente %>  </td>
-                <td> <%=ficha.produto %>  </td>
-                <td> <%=ficha.maquina %> </td>
-                <td> <%=ficha.materiaprima %> </td>
-                <td> <%=ficha.molde %> </td>
-                <td> 
-                    <form method="GET" action="/fichas/edit/<%= ficha.id %>" style="display: inline;">                                     
-                            <button class="btn btn-warning"> Editar</button>
-                    </form>
-                    
-                    <form method="POST" action="/fichas/delete" style="display: inline;" onsubmit="confirmarDelecao(event, this)"> 
-                            <input type="hidden" name="id" value="<%= ficha.id %>">
-                            <button class="btn btn-danger"> Remover</button>
-                    </form> </th>
-                </td>
-            </tr>
-
-           <% }) %> 
+           
            
            
         </tbody>
 
 
     </table>
+
 
 </div>
 
@@ -64,5 +60,6 @@
 
 </script>
 
-
-<%- include ('../partials/footer.ejs') %>
+<script src=/scripts/jquery.js></script>
+<script src=/scripts/FichaScripts.js></script>
+<%- include ('../partials/footer.ejs') %>   
