--- a/views/maquinas/index.ejs
+++ b/views/maquinas/index.ejs
@@ -13,6 +13,7 @@
             <tr>
                 <th> ID </th>
                 <th> Descrição </th>
+                <th> MAC </th>
                 <th> Código </th>
                 <th> Peso </th>
                 <th> Modelo </th>
@@ -24,6 +25,7 @@
             <tr>
                 <td> <%= article.id %> </td>
                 <td> <%=article.descricao %>  </td>
+                <td> <%=article.mac %>  </td>
                 <td> <%=article.codigo %>  </td>
                 <td> <%=article.peso %> </td>
                 <td> <%=article.modelo %> </td>
