--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -8,26 +8,14 @@
             <a class="nav-link <%=nav_ficha%>" href="/fichas" >Fichas Técnicas</a>
         </li>
         <li class="navbar-item">
-            <a class="nav-link <%=nav_maquinas%>" href="/maquinas" >Maquinas</a>
-        </li>
-        <!-- <li class="navbar-item">
-                <a class="nav-link <%=nav_produtos%>" href="/produtos">Produtos</a>
+            <a class="nav-link <%=nav_parametros%>" href="/parametrosReal">Parâmetros</a>
         </li>
         <li class="navbar-item">
-                <a class="nav-link <%=nav_mp%> " href="/materiaprima">Matérias Primas</a>
-        </li> -->
+            <a class="nav-link <%=nav_maquinas%>" href="/maquinas" >Maquinas</a>
+        </li>       
         <li class="navbar-item">
                 <a class="nav-link <%=nav_usuarios%>" href="/users">Usuários</a>
         </li>
-        <!-- <li class="navbar-item">
-            <a class="nav-link <%=nav_moldes%>" href="/moldes">Moldes</a>
-        </li>
-        <li class="navbar-item">
-            <a class="nav-link <%=nav_clientes%>" href="/clientes">Clientes</a>
-        </li> -->
-     
-
-
     </ul>
 
     <ul class="navbar-nav ml-auto">
