[alteracao de grafico/

--- a/views/fichas/index.ejs
+++ b/views/fichas/index.ejs
@@ -23,7 +23,7 @@
 
 
     <labe id="prodShot" style="margin-right: 10%; font-size: 20px; font-weight:bold;" data-toggle="modal" data-target="#myModal"> Production Shot :</labe>
-    <labe id="cycleTime"style="font-size: 20px; font-weight:bold;"> Cycle Time :</labe>
+    <labe id="cycleTime"style="font-size: 20px; font-weight:bold;" data-toggle="modal" data-target="#myModal"> Cycle Time :</labe>
     <br>
     <br>
     <table class="table table-bordered" id="parametros"> 
