[insercao de dependencias]

--- a/views/maquinas/new.ejs
+++ b/views/maquinas/new.ejs
@@ -13,7 +13,7 @@
             <div class="card-body">
                     <form  method="POST" action="/maquinas/create">
                             <input class="form-control" type="text" name="cliente" placeholder="Insira uma descricao nome Para a Máquina"><br>
-                            <input class="form-control" type="text" name="mac" placeholder="Insira um mac nome Para a Máquina"><br>
+                            <input class="form-control" type="text" name="mac" placeholder="Insira um ip Para a Máquina"><br>
                             <input class="form-control" type="text" name="codigo" placeholder="Insira um código Para a Máquina"><br>
                             <input class="form-control" type="text" name="peso" placeholder="Insira um peso em Toneladas Para a Máquina"><br>
                             <input class="form-control" type="text" name="modelo" placeholder="Inseira o modelo da Máquia"><br>
