--- a/views/maquinas/index.ejs
+++ b/views/maquinas/index.ejs
@@ -13,7 +13,7 @@
             <tr>
                 <th> ID </th>
                 <th> Descrição </th>
-                <th> MAC </th>
+                <th> IP </th>
                 <th> Código </th>
                 <th> Peso </th>
                 <th> Modelo </th>
@@ -64,5 +64,5 @@
 
 </script>
 
-
+<script src=/scripts/jquery.js></script>
 <%- include ('../partials/footer.ejs') %>
