[insercao de novos dados para amostragem]

--- a/views/fichas/index.ejs
+++ b/views/fichas/index.ejs
@@ -22,8 +22,24 @@
 <br>
 
 
-    <labe id="prodShot" style="margin-right: 10%; font-size: 20px; font-weight:bold;" data-toggle="modal" data-target="#myModal"> Production Shot :</labe>
-    <labe id="cycleTime"style="font-size: 20px; font-weight:bold;" data-toggle="modal" data-target="#myModal"> Cycle Time :</labe>
+    <labe id="prodShot" style="margin-right: 4%; font-size: 20px; font-weight:bold;" data-toggle="modal" data-target="#myModal"> Production Shot :</labe>
+    <labe id="cycleTime"style="margin-right: 4%; font-size: 20px; font-weight:bold;" data-toggle="modal" data-target="#myModal"> Cycle Time :</labe>
+    <labe id="dwellPressure"style="margin-right: 4%; font-size: 20px; font-weight:bold;" > Dwell Pressure :</labe>
+    <labe id="ok_prodShot"style="margin-right: 4%; font-size: 20px; font-weight:bold;" > OK ProdShot :</labe>
+    <br>
+    <labe id="fillingTime"style="margin-right: 4%; font-size: 20px; font-weight:bold;" > Filling Time :</labe>
+    <labe id="chargingTime"style="margin-right: 4%; font-size: 20px; font-weight:bold;" > Charging Time :</labe>  
+    <labe id="takeoutTime"style="margin-right: 3%; font-size: 20px; font-weight:bold;" > Take Out Time :</labe>  
+    <labe id="dwellChnagePosition"style="margin-right: 4%; font-size: 20px; font-weight:bold;" > Dwell Change Position :</labe> 
+    <br>
+    <labe id="cushionPosition"style="margin-right: 4%; font-size: 20px; font-weight:bold;" > Cushion Position:</labe>
+    <labe id="minumumCushionPosition"style="margin-right: 4%; font-size: 20px; font-weight:bold;" > Minimum Cushion Position :</labe>  
+    <labe id="injetStartPosition"style="margin-right: 4%; font-size: 20px; font-weight:bold;" > Injet Start Position :</labe>  
+    <br>
+    <labe id="maxInjectPressure"style="margin-right: 4%; font-size: 20px; font-weight:bold;" > Max Inject Pressure:</labe>  
+    <labe id="screwRotationSpeed"style="margin-right: 4%; font-size: 20px; font-weight:bold;" > Screw Rotation Speed :</labe>  
+
+
     <br>
     <br>
     <table class="table table-bordered" id="parametros"> 
