--- a/views/parametros/new.ejs
+++ b/views/parametros/new.ejs
@@ -42,6 +42,102 @@
                                         <input id="VI2_max" name="VI2_max" size="30" type="number" />
                                 </div>
 
+                                <div>
+                                        <label for="username">Dwell Pressure Min: </label>
+                                        <input id="VI3_min" name="VI3_min" size="30" type="number" />
+                                
+                                        <label for="name">Dwell Pressure Max: </label>
+                                        <input id="VI3_max" name="VI3_max" size="30" type="number" />
+                                </div>
+
+                                <div>
+                                        <label for="username">Ok ProdShot Min: </label>
+                                        <input id="ok_prodShot_min" name="ok_prodShot_min" size="30" type="number" />
+                                
+                                        <label for="name">Ok ProdShot Max: </label>
+                                        <input id="ok_prodShot_max" name="ok_prodShot_max" size="30" type="number" />
+                                </div>
+
+                                <div>
+                                        <label for="username">Print Shot Min: </label>
+                                        <input id="printShotMin_min" name="printShotMin_min" size="30" type="number" />
+                                
+                                        <label for="name">Print Shot Max: </label>
+                                        <input id="printShotMin_max" name="printShotMin_max" size="30" type="number" />
+                                </div>
+
+                                <div>
+                                        <label for="username">Filling Time Min: </label>
+                                        <input id="fillingTime_min" name="fillingTime_min" size="30" type="number" />
+                                
+                                        <label for="name">Filling Time Max: </label>
+                                        <input id="fillingTime_max" name="fillingTime_max" size="30" type="number" />
+                                </div>
+
+                                <div>
+                                        <label for="username">Charging Time Min: </label>
+                                        <input id="chargingTime_min" name="chargingTime_min" size="30" type="number" />
+                                
+                                        <label for="name">Charging Time Max: </label>
+                                        <input id="chargingTime_max" name="chargingTime_max" size="30" type="number" />
+                                </div>
+
+                                <div>
+                                        <label for="username">Take Out Time Min: </label>
+                                        <input id="takeoutTime_min" name="takeoutTime_min" size="30" type="number" />
+                                
+                                        <label for="name">Take Out Time Max: </label>
+                                        <input id="takeoutTime_max" name="takeoutTime_max" size="30" type="number" />
+                                </div>
+
+                                <div>
+                                        <label for="username">Dwell Change Position Min: </label>
+                                        <input id="dwellChnagePosition_min" name="dwellChnagePosition_min" size="30" type="number" />
+                                
+                                        <label for="name">Dwell Change Position Max: </label>
+                                        <input id="dwellChnagePosition_max" name="dwellChnagePosition_max" size="30" type="number" />
+                                </div>
+
+                                <div>
+                                        <label for="username">Minumum Cushion Position Min: </label>
+                                        <input id="minumumCushionPosition_min" name="minumumCushionPosition_min" size="30" type="number" />
+                                
+                                        <label for="name">Minumum Cushion Position Max: </label>
+                                        <input id="minumumCushionPosition_max" name="minumumCushionPosition_max" size="30" type="number" />
+                                </div>
+
+                                <div>
+                                        <label for="username">Cushion Position Min: </label>
+                                        <input id="cushionPosition_min" name="cushionPosition_min" size="30" type="number" />
+                                
+                                        <label for="name">Cushion Position Max: </label>
+                                        <input id="cushionPosition_max" name="cushionPosition_max" size="30" type="number" />
+                                </div>
+
+                                <div>
+                                        <label for="username">Injet Start Position Min: </label>
+                                        <input id="injetStartPosition_min" name="injetStartPosition_min" size="30" type="number" />
+                                
+                                        <label for="name">Injet Start Position Max: </label>
+                                        <input id="injetStartPosition_max" name="injetStartPosition_max" size="30" type="number" />
+                                </div>
+
+                                <div>
+                                        <label for="username">Max Inject Pressure Min: </label>
+                                        <input id="maxInjectPressure_min" name="maxInjectPressure_min" size="30" type="number" />
+                                
+                                        <label for="name">Max Inject Pressure Max: </label>
+                                        <input id="maxInjectPressure_max" name="maxInjectPressure_max" size="30" type="number" />
+                                </div>
+
+                                <div>
+                                        <label for="username">Crew Rotation Speed Min: </label>
+                                        <input id="crewRotationSpeed_min" name="crewRotationSpeed_min" size="30" type="number" />
+                                
+                                        <label for="name">Crew Rotation Speed Max: </label>
+                                        <input id="crewRotationSpeed_max" name="crewRotationSpeed_max" size="30" type="number" />
+                                </div>
+
                                                     
                             <br>
                             <button class="btn btn-primary">Cadastrar</button>
