--- a/views/parametros/new.ejs
+++ b/views/parametros/new.ejs
@@ -138,6 +138,78 @@
                                         <input id="crewRotationSpeed_max" name="crewRotationSpeed_max" size="30" type="number" />
                                 </div>
 
+                                <div>
+                                        <label for="username">Temperature Hen Min: </label>
+                                        <input id="temperature_hen_min" name="temperature_hen_min" size="30" type="number" />
+                                
+                                        <label for="name">Temperature Hen Max: </label>
+                                        <input id="temperature_hen_max" name="temperature_hen_max" size="30" type="number" />
+                                </div>
+
+                                <div>
+                                        <label for="username">Temperature Hn Min: </label>
+                                        <input id="temperature_hn_min" name="temperature_hn_min" size="30" type="number" />
+                                
+                                        <label for="name">Temperature Hn Max: </label>
+                                        <input id="temperature_hn_max" name="temperature_hn_max" size="30" type="number" />
+                                </div>
+
+                                <div>
+                                        <label for="username">Temperature H1 Min: </label>
+                                        <input id="temperature_h1_min" name="temperature_h1_min" size="30" type="number" />
+                                
+                                        <label for="name">Temperature Hn Max: </label>
+                                        <input id="temperature_h1_max" name="temperature_h1_max" size="30" type="number" />
+                                </div>
+
+                                <div>
+                                        <label for="username">Temperature H2 Min: </label>
+                                        <input id="temperature_h2_min" name="temperature_h2_min" size="30" type="number" />
+                                
+                                        <label for="name">Temperature H2 Max: </label>
+                                        <input id="temperature_h2_max" name="temperature_h2_max" size="30" type="number" />
+                                </div>
+
+                                <div>
+                                        <label for="username">Temperature H3 Min: </label>
+                                        <input id="temperature_h3_min" name="temperature_h3_min" size="30" type="number" />
+                                
+                                        <label for="name">Temperature H2 Max: </label>
+                                        <input id="temperature_h3_max" name="temperature_h3_max" size="30" type="number" />
+                                </div>
+
+                                <div>
+                                        <label for="username">Temperature H4 Min: </label>
+                                        <input id="temperature_h4_min" name="temperature_h4_min" size="30" type="number" />
+                                
+                                        <label for="name">Temperature H4 Max: </label>
+                                        <input id="temperature_h4_max" name="temperature_h4_max" size="30" type="number" />
+                                </div>
+
+                                <div>
+                                        <label for="username">Temperature H5 Min: </label>
+                                        <input id="temperature_h5_min" name="temperature_h5_min" size="30" type="number" />
+                                
+                                        <label for="name">Temperature H4 Max: </label>
+                                        <input id="temperature_h5_max" name="temperature_h5_max" size="30" type="number" />
+                                </div>
+
+                                <div>
+                                        <label for="username">Temperature OIL Min: </label>
+                                        <input id="temperature_oil_min" name="temperature_oil_min" size="30" type="number" />
+                                
+                                        <label for="name">Temperature OIL Max: </label>
+                                        <input id="temperature_oil_max" name="temperature_oil_max" size="30" type="number" />
+                                </div>
+
+                                <div>
+                                        <label for="username">Temperature HOP Min: </label>
+                                        <input id="temperature_hop_min" name="temperature_hop_min" size="30" type="number" />
+                                
+                                        <label for="name">Temperature HOP Max: </label>
+                                        <input id="temperature_hop_max" name="temperature_hop_max" size="30" type="number" />
+                                </div>
+
                                                     
                             <br>
                             <button class="btn btn-primary">Cadastrar</button>
