--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -15,7 +15,9 @@
         </li>       
         <li class="navbar-item">
                 <a class="nav-link <%=nav_usuarios%>" href="/users">Usuários</a>
-        </li>
+        </li><li class="navbar-item">
+            <a class="nav-link <%=nav_usuarios%>" href="http://170.10.1.28/a3L/login" target="_blank">A3</a>
+    </li>
     </ul>
 
     <ul class="navbar-nav ml-auto">
