--- a/views/fichas/index.ejs
+++ b/views/fichas/index.ejs
@@ -5,7 +5,7 @@
 
     <hr>
     <h2>Fichas Técnicas</h2> 
-    <a class="btn btn-success" href="/fichas/new"> Inserir Nova Ficha Técnica</a>
+    <a class="btn btn-success" href="/novaficha"> Inserir Nova Ficha Técnica</a>
     <hr>
 
     <input type="hidden" name="dsMaquina"  id="dsMaquina" value="<%= dsMaquina %>">
