--- a/views/fichas/index.ejs
+++ b/views/fichas/index.ejs
@@ -16,6 +16,26 @@
                 <option value="<%= maquina.id %>"> <%= maquina.descricao %></option>
         <% }) %>
     </select>
+
+    <br>
+<h5>Alertas Abertos : </h5>
+<br>
+<table class="table table-bordered" id="alertas"> 
+    <thead>
+        <tr>
+            <th> Descrição dos Alertas: </th>
+                   
+        </tr>
+    </thead>
+    <tbody>
+
+       
+       
+       
+    </tbody>
+
+
+</table>
 <br>
 <h5>Parâmetros de tempo real : </h5>
 <br>
