--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -14,6 +14,9 @@
             <a class="nav-link <%=nav_maquinas%>" href="/maquinas" >Maquinas</a>
         </li>       
         <li class="navbar-item">
+            <a class="nav-link <%=nav_alertas%>" href="/alertas" >Alertas</a>
+        </li>  
+        <li class="navbar-item">
                 <a class="nav-link <%=nav_usuarios%>" href="/users">Usuários</a>
         </li><li class="navbar-item">
             <a class="nav-link <%=nav_usuarios%>" href="http://170.10.1.28/a3L/login" target="_blank">A3</a>
