--- a/views/fichas/index.ejs
+++ b/views/fichas/index.ejs
@@ -18,7 +18,7 @@
     </select>
 
     <br>
-<h5>Alertas Abertos : </h5>
+<!-- <h5>Alertas Abertos : </h5>
 <br>
 <table class="table table-bordered" id="alertas"> 
     <thead>
@@ -27,16 +27,16 @@
                    
         </tr>
     </thead>
-    <tbody>
+    <tbody> -->
 
        
        
        
-    </tbody>
+    <!-- </tbody> -->
 
 
-</table>
-<br>
+<!-- </table> -->
+<!-- <br>
 <h5>Parâmetros de tempo real : </h5>
 <br>
 <table class="table table-bordered" id="parametrosReais"> 
@@ -48,15 +48,13 @@
             <th> Último valor lido </th>             
         </tr>
     </thead>
-    <tbody>
-
-       
+    <tbody>      
        
        
     </tbody>
 
 
-</table>
+</table> -->
 
   
     
