--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -7,9 +7,9 @@
         <li class="navbar-item">
             <a class="nav-link <%=nav_ficha%>" href="/fichas" >Fichas Técnicas</a>
         </li>
-        <li class="navbar-item">
+        <!-- <li class="navbar-item">
             <a class="nav-link <%=nav_parametros%>" href="/parametrosReal">Parâmetros</a>
-        </li>
+        </li> -->
         <li class="navbar-item">
             <a class="nav-link <%=nav_maquinas%>" href="/maquinas" >Maquinas</a>
         </li>       
