--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -26,7 +26,7 @@
     <ul class="navbar-nav ml-auto">
     
         <li class="navbar-item">
-            <a class="nav-link" href="/logout">Logout</a>
+            <a class="nav-link" href="/">Logout</a>
         </li>
 
 
