--- a/views/fichas/editHaitian.ejs
+++ b/views/fichas/editHaitian.ejs
@@ -10,7 +10,7 @@
          <div class="card-body">
             <form method="POST" action="/fichas/updateHaitian" style="display: inline;">
                <input type="hidden" name="id" value="<%= injetor.id %>">
-               <input type="hidden" name="maquina" value="<%= injetor.maquinaId %>">
+               <input type="hidden" name="maquina" value="<%= injetor.maq %>">
 
                <div class="d-flex justify-content-between">
                   <!-- INJETORES -->
