--- a/views/fichas/editToshiba.ejs
+++ b/views/fichas/editToshiba.ejs
@@ -11,7 +11,7 @@
          <form  method="POST" action="/fichas/update" style="display: inline;">
             <div id="toshiba">
                <input type="hidden" name="id" value="<%= ficha.id %>">
-               <input type="hidden" name="maquina" value="<%= ficha.maquinaId %>">
+               <input type="hidden" name="maquina" value="<%= ficha.maq %>">
                <div>
                   <label for="username">VI1 Min: </label>
                   <input id="VI1_min" name="VI1_min" size="30" type="number" value="<%= ficha.VI1_min %>" />
