--- a/views/maquinas/new.ejs
+++ b/views/maquinas/new.ejs
@@ -7,7 +7,7 @@
     <div class="card">
             <div class="card-header">
                    
-                        <h2>Nova Ficha Técnica</h2>
+                        <h2>Nova Máquina</h2>
                     
             </div>
             <div class="card-body">
