adicionado componentes faltantes nos perifericos

--- a/views/fichas/newFichaHaitian.ejs
+++ b/views/fichas/newFichaHaitian.ejs
@@ -525,6 +525,23 @@
                   </tr>
                <% } %>
             </tbody>
+            <tfoot>
+               <tr>
+                  <th colspan="1">TERMOPAR:</th>
+                  <th colspan="1">K:</th>
+                  <td colspan="1">
+                     <input style="width: 100%" id="termoparK1" name="termoparK1">
+                  </td>
+                  <th colspan="1">J: 1~78</th>
+                  <td colspan="1">
+                     <input style="width: 100%" id="termoparJ" name="termoparJ">
+                  </td>
+                  <th colspan="1">K:</th>
+                  <td colspan="1">
+                     <input style="width: 100%" id="termoparK2" name="termoparK2">
+                  </td>
+               </tr>
+            </tfoot>
          </table>
          
          <table class="table-bordered" style="width: 100%;">
