--- a/views/revisao/visualizationHaitian.ejs
+++ b/views/revisao/visualizationHaitian.ejs
@@ -1215,6 +1215,23 @@
                         </td>
                      </tr>
                   </tbody>
+                  <tfoot>
+                     <tr>
+                        <th colspan="1">TERMOPAR:</th>
+                        <th colspan="1">K:</th>
+                        <td colspan="1">
+                           <input class="read-only" style="width: 100%" id="termoparK1" name="termoparK1" value="<%= perifericos.termoparK1 %>">
+                        </td>
+                        <th colspan="1">J: 1~78</th>
+                        <td colspan="1">
+                           <input class="read-only" style="width: 100%" id="termoparJ" name="termoparJ" value="<%= perifericos.termoparJ %>">
+                        </td>
+                        <th colspan="1">K:</th>
+                        <td colspan="1">
+                           <input class="read-only" style="width: 100%" id="termoparK2" name="termoparK2" value="<%= perifericos.termoparK2 %>">
+                        </td>
+                     </tr>
+                  </tfoot>
                </table>
                
                <table class="table-bordered" style="width: 100%;">
