--- a/views/fichas/newFichaHaitian.ejs
+++ b/views/fichas/newFichaHaitian.ejs
@@ -9,7 +9,7 @@
    
    <div class="d-flex justify-content-between">
       <!-- INJETORES -->
-      <div class="table-responsive table-ficha justify-content-between" style="width: 50vw; margin-right: 20px;">
+      <div class="d-flex flex-column table-responsive table-ficha justify-content-between" style="width: 50vw; margin-right: 20px;">
          <table class="table-bordered" style="width: 100%">
             <thead>
                <tr>
@@ -34,7 +34,7 @@
             </tbody>
          </table>
    
-         <table class="table-bordered" style="width: 100%; margin-top: 30px;">
+         <table class="table-bordered" style="width: 100%;">
             <thead>
                <tr>
                   <th colspan="6">INJEÇÃO</th>
@@ -93,7 +93,7 @@
             </tfoot>
          </table>
    
-         <table class="table-bordered" style="width: 100%; margin-top: 30px;">
+         <table class="table-bordered" style="width: 100%;">
             <thead>
                <tr>
                   <th colspan="6">RECALQUE</th>
@@ -134,7 +134,7 @@
             </tbody>
          </table>
    
-         <table class="table-bordered" style="width: 100%; margin-top: 30px;">
+         <table class="table-bordered" style="width: 100%;">
             <thead>
                <tr>
                   <th colspan="6">DOSAGEM</th>
@@ -191,7 +191,7 @@
             </tfoot>
          </table>
    
-         <table class="table-bordered" style="width: 100%; margin-top: 30px;">
+         <table class="table-bordered" style="width: 100%;">
             <thead>
                <tr>
                   <th colspan="6">DESCOMPRESSÃO</th>
@@ -225,7 +225,7 @@
             </tbody>
          </table>
    
-         <table class="table-bordered" style="width: 100%; margin-top: 30px;">
+         <table class="table-bordered" style="width: 100%;">
             <thead>
                <tr>
                   <th colspan="6">FECHAMENTO</th>
@@ -298,7 +298,7 @@
             </tfoot>
          </table>
    
-         <table class="table-bordered" style="width: 100%; margin-top: 30px;">
+         <table class="table-bordered" style="width: 100%;">
             <thead>
                <tr>
                   <th colspan="6">ABERTURA</th>
@@ -351,7 +351,7 @@
             </tfoot>
          </table>
    
-         <table class="table-bordered" style="width: 100%; margin-top: 30px;">
+         <table class="table-bordered" style="width: 100%;">
             <thead>
                <tr>
                   <th colspan="6">EXTRAÇÃO</th>
@@ -426,7 +426,7 @@
             </tfoot>
          </table>
    
-         <table class="table-bordered" style="width: 100%; margin-top: 30px;">
+         <table class="table-bordered" style="width: 100%;">
             <thead>
                <tr>
                   <th colspan="6">RADIAL HIDRÁULICO</th>
@@ -544,7 +544,7 @@
             </tfoot>
          </table>
          
-         <table class="table-bordered" style="width: 100%;">
+         <table class="table-bordered" style="width: 100%; margin-top: 40px">
             <thead>
                <tr>
                   <th colspan="5">VALVE GATES</th>
@@ -555,24 +555,53 @@
                </tr>
             </thead>
             <tbody>
+               <tr>
+                  <th>BICO</th>
+                  <th>DLY TIME</th>
+                  <th>ACT TIME</th>
+                  <th>BICO</th>
+                  <th>DLY TIME</th>
+                  <th>ACT TIME</th>
+               </tr>
                <% count = 0 %>
-               <% for(var j = 0; j < 13; j++) { %>
+               <% count2 = 45 %>
+               <% for(var j = 0; j < 45; j++) { %>
                   <tr>
-                     <% for(var i = 0; i < 7; i++) { %>
-                        <% count++ %>
-   
-                        <% if(count <= 90) { %>
-                           <td>
-                              <input style="width: 100%" id="VG<%= i+1 %>" name="VG<%= i+1 %>" placeholder="VG<%= count %>">
-                           </td>
-                        <% } %>
+                     <!-- lado esquerdo -->
+                     <% for(var i = 0; i < 1; i++) { %> 
+                        <th>VG<%= j+1 %></th>
+                     <% } %>
+                     
+                     <% for(var i = 0; i < 2; i++) { %>
+                        <td>
+                           <input style="width: 100%" id="VG1" name="VG1" placeholder="VG<%= j+1 %>">
+                        </td>
+                     <% } %>
+                        
+                     <!-- lado direito -->
+                     <% for(var i = 0; i < 1; i++) { %>
+                        <th>VG<%= ++count2 %></th>
+                     <% } %>
+                     
+                     <% for(var i = 0; i < 2; i++) { %>
+                        <td>
+                           <input style="width: 100%" id="VG2" name="VG2" placeholder="VG<%= count2 %>">
+                        </td>
                      <% } %>
                   </tr>
                <% } %>
             </tbody>
+            <tfoot>
+               <tr>
+                  <th colspan="1">VOLTAGEM:</th>
+                  <td colspan="6">
+                     <input style="width: 100%" id="voltagem" name="voltagem">
+                  </td>
+               </tr>
+            </tfoot>
          </table>
    
-         <table class="table-bordered">
+         <table class="table-bordered" style="margin-top: 40px">
             <thead>
                <tr>
                   <th colspan="7">REFRIGERAÇÃO DO MOLDE</th>
@@ -603,7 +632,7 @@
             </tbody>
          </table>
    
-         <table class="table-bordered">
+         <table class="table-bordered" style="margin-top: 40px">
             <thead>
                <tr>
                   <th colspan="7">STEAM(VAPOR)</th>
