comparação de parametros reais e cadastrados funcionando

--- a/views/fichas/index.ejs
+++ b/views/fichas/index.ejs
@@ -19,7 +19,7 @@
     </select>
 
     <br>
-<h5>Alertas Abertos : </h5>
+<!-- <h5>Alertas Abertos : </h5>
 <br>
 <table class="table table-bordered" id="alertas"> 
     <thead>
@@ -57,7 +57,7 @@
     </tbody>
 
 
-</table>
+</table> -->
 
   
     
@@ -113,6 +113,7 @@
 </script>
 
 <script src=/scripts/jquery.js></script>
-<script src=/scripts/FichaScripts.js></script>
+<!-- <script src=/scripts/FichaScripts.js></script> -->
+<script src=/scripts/FichaScripts2.js></script>
 
 <%- include ('../partials/footer.ejs') %>   
